# grobot

./: README.md
grobot_msgs/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
grobot_msgs/msg/: VoiceLocalsEntry.msg  VoiceLocalsEntry.msg~
grobot_msgs/srv/: AddPosition.srv  AddPosition.srv~  DeletePosition.srv  DeletePosition.srv~  GetAllPosition.srv  GetAllPosition.srv~  ModifyPosition.srv  ModifyPosition.srv~  ResetAllPosition.srv~  SavePosition.srv  SavePosition.srv~
