<?xml version="1.0"?>
<package>
  <name>grobot_msgs</name>
  <version>0.1.0</version>
  <description>grobot framework messages package</description>

  <author email="wwx2002@gmail.com">hrm</author>
  <maintainer email="wwx2002@gmail.com">hrm</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/grobot_msgs</url>
  <url type="repository">https://github.com/1chick/grobot_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>uuid_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
